3.0.13
- curse curio effect de-duplication
- curse of wrath and curse of pride now stacks additively
- only 3 hand curios would take effect when held in hand
- Prevent ragnarok trait from causing CME in mobs reassessing weapon goals
- support <1% chance display
- balanced some curios
- allow trait caps

3.0.12
- Fix health scaling not applying on mobs with entity config
- Fix trait generation with Abyssal Throne
- Trait blacklist has higher priority than Trait whitelist now

3.0.11
- Add trait exclusion
- Make Death Tome not dropping any L2H drops
- Add RU translation
- blacklisted mobs may still have levels and traits when addons give them one
- Fix pandora slot icon on Accessories

3.0.10
- Include Pandora API
- Now looting charms can fit into pandora bracelet / necklace


3.0.9
- Tweak configs and level settings for traits to make them more balanced
- Dementor, Dispell, and Grenade damage will get reduced scaling
- Allow mobs to have their own level based scaling

3.0.8
- Fix JEI display when trait max level is lower than loot min level requirement

3.0.7
- Allow mobs with high level to use special items from L2Complements
- After you defeat Cataclysm bosses, mobs might be able to use respective weapons


3.0.6
- Add hostility events for other mods to make integration
- Add special weapon generation

3.0.5
- Make Iron Spell damage count as magic damage

3.0.4
- Now Fake player cannot get hostility orbs nor increase player difficulty


3.0.3
- Restore Cataclysm integration
- Ban Protective trait from bosses
- Limit Invisible trait to certain vanilla mobs
- Fix missing boss tags for compat mods
- Fix entity default carried item config
- Fix config description for trait toggles

3.0.2
- Restore Gateway, BoMD, and MutantMonster integration
- Add KubeJS integration and example
- Fix compat with Apotheosis
- Fix Book of Omniscience shift use
- Prevent double split
- Fix get player total difficulty command

3.0.1
- Add max trait count and suppression config in datapack