@@ -32,7 +32,7 @@ patchouli_ver = 1.21-87-NEOFORGE-SNAPSHOT
 
 lljij = true
 
-mod_version=3.0.12+4
+mod_version=3.0.12+5
 
 l2serial_ver = 3.1.1
 l2core_ver = 3.0.8+12
