@@ -1,4 +1,4 @@
-// 1.21.1	2026-01-24T15:30:12.438174	Curios for l2hostility
+// 1.21.1	2026-01-24T16:30:21.667035	Curios for l2hostility
 ebeb48de7adb1993e9b09296c27afc6aeb3a25c7 data/l2hostility/curios/entities/hostility_entity.json
-89c1553f8dacacdb283a3993aba5c4d8234b61be data/l2hostility/curios/entities/l2hostility/curios/entities/l2hostility_cataclysm.json
+75eb051815478606064516e5ce4109330dbeda7e data/l2hostility/curios/entities/l2hostility/curios/entities/l2hostility_cataclysm.json
 0d95485f6e4c55be680b88662a7acc03a2cd8376 data/l2hostility/curios/slots/hostility_curse.json
