@@ -288,6 +288,8 @@
   "l2hostility.configuration.defaultLevelVar.tooltip": "0˙000Ɩ ~ 0˙0 :ǝbuɐᴚ \n0˙9Ɩ :ʇןnɐɟǝᗡ ",
   "l2hostility.configuration.dementorDamageFactor": "ɹǝɥbıɥ ɹo X ɟo ןǝʌǝן ʇuǝɯʇuɐɥɔuƎ xɐɯ ɥʇıʍ qoɯ ɐ sʇıɥ ʇı uǝɥʍ ǝsɹnƆ buıɥsıuɐΛ puɐ 0ᄅ ɥɔno⟘ pıoΛ uıɐb ןןıʍ ʇuıɹdǝᴚ",
   "l2hostility.configuration.dementorDamageFactor.tooltip": "0˙Ɩ ~ 0˙0 :ǝbuɐᴚ \nϛ˙0 :ʇןnɐɟǝᗡ \nןǝʌǝן ɹǝd %Ɩ+ buıɯoɔǝq snuoq ǝbɐɯɐp ןǝʌǝן ɹǝd %ᄅ+ suɐǝɯ ϛ˙0 :ǝןdɯɐxƎ\nǝbɐɯɐp pǝʇɔǝɟɟɐ-ɹoʇuǝɯǝp ɹoɟ ɹoʇɔɐℲ snuoᗺ ǝbɐɯɐᗡ",
+  "l2hostility.configuration.dementorDamageReductionBase": "ɹǝɥbıɥ ɹo X ɟo ןǝʌǝן ʇuǝɯʇuɐɥɔuƎ xɐɯ ɥʇıʍ qoɯ ɐ sʇıɥ ʇı uǝɥʍ ǝsɹnƆ buıɥsıuɐΛ puɐ 0ᄅ ɥɔno⟘ pıoΛ uıɐb ןןıʍ ʇuıɹdǝᴚ",
+  "l2hostility.configuration.dementorDamageReductionBase.tooltip": "0˙00Ɩ ~ Ɩ0˙Ɩ :ǝbuɐᴚ \n0˙ᄅ :ʇןnɐɟǝᗡ \n9 >- 000000Ɩ 'ᄅ >- 00Ɩ suɐǝɯ 0Ɩ :ǝןdɯɐxƎ\n0Ɩ >- ㄣᄅ0Ɩ 'ㄣ >- 9Ɩ suɐǝɯ ᄅ :ǝןdɯɐxƎ\nᄅㄥ >- 000Ɩ '8ㄣ >- 00Ɩ suɐǝɯ Ɩ˙Ɩ :ǝןdɯɐxƎ\nɹǝqɯnu bıɟuoɔ sıɥʇ ɟo ǝsɐq ɥʇıʍ boן ɐ ǝʞɐʇ ןןıʍ ǝbɐɯɐp ɔıbɐW\nɹoʇuǝɯǝᗡ ɹoɟ ǝsɐᗺ uoıʇɔnpǝᴚ ǝbɐɯɐᗡ",
   "l2hostility.configuration.difficulty": "sbuıʇʇǝS ʎʇןnɔıɟɟıᗡ",
   "l2hostility.configuration.dimensionFactor": "pǝʇısıʌ ןǝʌǝן ɹǝd snuoq ʎʇןnɔıɟɟıᗡ",
   "l2hostility.configuration.dimensionFactor.tooltip": "000Ɩ ~ 0 :ǝbuɐᴚ \n0Ɩ :ʇןnɐɟǝᗡ ",
@@ -295,6 +297,8 @@
   "l2hostility.configuration.disableHostilityLootCurioRequirement.tooltip": "",
   "l2hostility.configuration.dispellDamageFactor": "ɹǝɥbıɥ ɹo X ɟo ןǝʌǝן ʇuǝɯʇuɐɥɔuƎ xɐɯ ɥʇıʍ qoɯ ɐ sʇıɥ ʇı uǝɥʍ ǝsɹnƆ buıɥsıuɐΛ puɐ 0ᄅ ɥɔno⟘ pıoΛ uıɐb ןןıʍ ʇuıɹdǝᴚ",
   "l2hostility.configuration.dispellDamageFactor.tooltip": "0˙Ɩ ~ 0˙0 :ǝbuɐᴚ \nϛ˙0 :ʇןnɐɟǝᗡ \nןǝʌǝן ɹǝd %Ɩ+ buıɯoɔǝq snuoq ǝbɐɯɐp ןǝʌǝן ɹǝd %ᄅ+ suɐǝɯ ϛ˙0 :ǝןdɯɐxƎ\nǝbɐɯɐp pǝʇɔǝɟɟɐ-ןןǝdsıp ɹoɟ ɹoʇɔɐℲ snuoᗺ ǝbɐɯɐᗡ",
+  "l2hostility.configuration.dispellDamageReductionBase": "ɹǝɥbıɥ ɹo X ɟo ןǝʌǝן ʇuǝɯʇuɐɥɔuƎ xɐɯ ɥʇıʍ qoɯ ɐ sʇıɥ ʇı uǝɥʍ ǝsɹnƆ buıɥsıuɐΛ puɐ 0ᄅ ɥɔno⟘ pıoΛ uıɐb ןןıʍ ʇuıɹdǝᴚ",
+  "l2hostility.configuration.dispellDamageReductionBase.tooltip": "0˙00Ɩ ~ Ɩ0˙Ɩ :ǝbuɐᴚ \n0˙ᄅ :ʇןnɐɟǝᗡ \n9 >- 000000Ɩ 'ᄅ >- 00Ɩ suɐǝɯ 0Ɩ :ǝןdɯɐxƎ\n0Ɩ >- ㄣᄅ0Ɩ 'ㄣ >- 9Ɩ suɐǝɯ ᄅ :ǝןdɯɐxƎ\nᄅㄥ >- 000Ɩ '8ㄣ >- 00Ɩ suɐǝɯ Ɩ˙Ɩ :ǝןdɯɐxƎ\nɹǝqɯnu bıɟuoɔ sıɥʇ ɟo ǝsɐq ɥʇıʍ boן ɐ ǝʞɐʇ ןןıʍ ǝbɐɯɐp ɔıbɐW-uoN\nןןǝdsıᗡ ɹoɟ ǝsɐᗺ uoıʇɔnpǝᴚ ǝbɐɯɐᗡ",
   "l2hostility.configuration.dispellTime": "ןןǝdsıᗡ ɹoɟ ןǝʌǝן ɹǝd pǝןqɐsıp ǝq oʇ sʇuǝɯʇuɐɥɔuǝ ɹoɟ sʞɔıʇ uı uoıʇɐɹnᗡ",
   "l2hostility.configuration.dispellTime.tooltip": "00009 ~ Ɩ :ǝbuɐᴚ \n00ᄅ :ʇןnɐɟǝᗡ ",
   "l2hostility.configuration.distanceFactor": "uıbıɹo ɯoɹɟ ʞɔoןq ɹǝd snuoq ʎʇןnɔıɟɟıᗡ",
@@ -621,9 +625,9 @@
   "trait.l2hostility.counter_strike.desc": "˙ǝʞıɹʇs ɹǝʇunoɔ ɐ ɯɹoɟɹǝd oʇ ʇdɯǝʇʇɐ ןןıʍ ʇı 'pǝʞɔɐʇʇɐ ɹǝʇɟⱯ",
   "trait.l2hostility.cursed": "pǝsɹnƆ",
   "trait.l2hostility.dementor": "ɹoʇuǝɯǝᗡ",
-  "trait.l2hostility.dementor.desc": "˙ɹoɯɹɐ ssɐdʎq ǝbɐɯɐᗡ ˙ǝbɐɯɐp ןɐɔısʎɥd oʇ ǝunɯɯI",
+  "trait.l2hostility.dementor.desc": "˙ɹoɯɹɐ ssɐdʎq ǝbɐɯɐᗡ ˙ǝbɐɯɐp ןɐɔısʎɥd oʇ ʇuɐʇsısǝᴚ",
   "trait.l2hostility.dispell": "ןןǝdsıᗡ",
-  "trait.l2hostility.dispell.desc": "˙spuoɔǝs %s ɹoɟ ɯǝɥʇ uo sʇuǝɯʇuɐɥɔuǝ ǝןqɐsıp puɐ ʇuǝɯdınbǝ pǝʇuɐɥɔuǝ %s sʞɔıd ʎןɯopuɐᴚ ˙suoıʇɔǝʇoɹd ןɐɔıbɐɯ ssɐdʎq ǝbɐɯɐᗡ ˙ǝbɐɯɐp ɔıbɐɯ oʇ ǝunɯɯI",
+  "trait.l2hostility.dispell.desc": "˙spuoɔǝs %s ɹoɟ ɯǝɥʇ uo sʇuǝɯʇuɐɥɔuǝ ǝןqɐsıp puɐ ʇuǝɯdınbǝ pǝʇuɐɥɔuǝ %s sʞɔıd ʎןɯopuɐᴚ ˙suoıʇɔǝʇoɹd ןɐɔıbɐɯ ssɐdʎq ǝbɐɯɐᗡ ˙ǝbɐɯɐp ɔıbɐɯ oʇ ʇuɐʇsısǝᴚ",
   "trait.l2hostility.drain": "uıɐɹᗡ",
   "trait.l2hostility.drain.desc": "˙%ss oʇ ǝsɐǝɹɔuı ʇsoɯ ʇⱯ ˙%s ʎq uoıʇɐɹnp ɹıǝɥʇ ǝsɐǝɹɔuı puɐ 'sʇɔǝɟɟǝ ןnɟɯɹɐɥ ʎɹǝʌǝ ɹoɟ ǝbɐɯɐp ǝɹoɯ %s ןɐǝp 'sʇɔǝɟɟǝ ןɐıɔıɟǝuǝq %s ǝʌoɯǝɹ 'ʇǝbɹɐʇ ʇıɥ uǝɥM ˙ןǝʌǝן ǝɯɐs ɥʇıʍ ʇıɐɹʇ uoıʇod ɯopuɐɹ ɐ sʇuɐɹ⅁",
   "trait.l2hostility.erosion": "uoısoɹƎ",
