@@ -288,6 +288,8 @@
   "l2hostility.configuration.defaultLevelVar.tooltip": " Default: 16.0\n Range: 0.0 ~ 1000.0",
   "l2hostility.configuration.dementorDamageFactor": "Reprint will gain Void Touch 20 and Vanishing Curse when it hits a mob with max Enchantment level of X or higher",
   "l2hostility.configuration.dementorDamageFactor.tooltip": "Damage Bonus Factor for dementor-affected damage\nExample: 0.5 means +2% per level damage bonus becoming +1% per level\n Default: 0.5\n Range: 0.0 ~ 1.0",
+  "l2hostility.configuration.dementorDamageReductionBase": "Reprint will gain Void Touch 20 and Vanishing Curse when it hits a mob with max Enchantment level of X or higher",
+  "l2hostility.configuration.dementorDamageReductionBase.tooltip": "Damage Reduction Base for Dementor\nMagic damage will take a log with base of this config number\nExample: 1.1 means 100 -> 48, 1000 -> 72\nExample: 2 means 16 -> 4, 1024 -> 10\nExample: 10 means 100 -> 2, 1000000 -> 6\n Default: 2.0\n Range: 1.01 ~ 100.0",
   "l2hostility.configuration.difficulty": "Difficulty Settings",
   "l2hostility.configuration.dimensionFactor": "Difficulty bonus per level visited",
   "l2hostility.configuration.dimensionFactor.tooltip": " Default: 10\n Range: 0 ~ 1000",
@@ -295,6 +297,8 @@
   "l2hostility.configuration.disableHostilityLootCurioRequirement.tooltip": "",
   "l2hostility.configuration.dispellDamageFactor": "Reprint will gain Void Touch 20 and Vanishing Curse when it hits a mob with max Enchantment level of X or higher",
   "l2hostility.configuration.dispellDamageFactor.tooltip": "Damage Bonus Factor for dispell-affected damage\nExample: 0.5 means +2% per level damage bonus becoming +1% per level\n Default: 0.5\n Range: 0.0 ~ 1.0",
+  "l2hostility.configuration.dispellDamageReductionBase": "Reprint will gain Void Touch 20 and Vanishing Curse when it hits a mob with max Enchantment level of X or higher",
+  "l2hostility.configuration.dispellDamageReductionBase.tooltip": "Damage Reduction Base for Dispell\nNon-Magic damage will take a log with base of this config number\nExample: 1.1 means 100 -> 48, 1000 -> 72\nExample: 2 means 16 -> 4, 1024 -> 10\nExample: 10 means 100 -> 2, 1000000 -> 6\n Default: 2.0\n Range: 1.01 ~ 100.0",
   "l2hostility.configuration.dispellTime": "Duration in ticks for enchantments to be disabled per level for Dispell",
   "l2hostility.configuration.dispellTime.tooltip": " Default: 200\n Range: 1 ~ 60000",
   "l2hostility.configuration.distanceFactor": "Difficulty bonus per block from origin",
@@ -621,9 +625,9 @@
   "trait.l2hostility.counter_strike.desc": "After attacked, it will attempt to perform a counter strike.",
   "trait.l2hostility.cursed": "Cursed",
   "trait.l2hostility.dementor": "Dementor",
-  "trait.l2hostility.dementor.desc": "Immune to physical damage. Damage bypass armor.",
+  "trait.l2hostility.dementor.desc": "Resistant to physical damage. Damage bypass armor.",
   "trait.l2hostility.dispell": "Dispell",
-  "trait.l2hostility.dispell.desc": "Immune to magic damage. Damage bypass magical protections. Randomly picks %s enchanted equipment and disable enchantments on them for %s seconds.",
+  "trait.l2hostility.dispell.desc": "Resistant to magic damage. Damage bypass magical protections. Randomly picks %s enchanted equipment and disable enchantments on them for %s seconds.",
   "trait.l2hostility.drain": "Drain",
   "trait.l2hostility.drain.desc": "Grants a random potion trait with same level. When hit target, remove %s beneficial effects, deal %s more damage for every harmful effects, and increase their duration by %s. At most increase to %ss.",
   "trait.l2hostility.erosion": "Erosion",
