@@ -52,8 +52,8 @@
   "block.l2hostility.hostility_beacon": "恶意信标",
   "block.l2hostility.miracle_block": "奇迹块",
   "trait.l2hostility.adaptive.desc": "记忆最近收到的%2$s种伤害。每次受到记忆中的伤害时，对那个伤害叠加%s%%的减伤（无上限）",
-  "trait.l2hostility.dementor.desc": "免疫物理伤害，伤害穿透护甲",
-  "trait.l2hostility.dispell.desc": "免疫魔法伤害。伤害穿透魔法保护。攻击时随机选中%s个附魔的装备并将其附魔封印%s秒",
+  "trait.l2hostility.dementor.desc": "抵抗物理伤害，伤害穿透护甲",
+  "trait.l2hostility.dispell.desc": "抵抗魔法伤害。伤害穿透魔法保护。攻击时随机选中%s个附魔的装备并将其附魔封印%s秒",
   "trait.l2hostility.reflect.desc": "将直接物理伤害以%s%%魔法伤害的形式反射",
   "trait.l2hostility.regenerate.desc": "每秒回复总血量的%s%%",
   "trait.l2hostility.fiery.desc": "点燃攻击者和被攻击者%s秒，怪物免疫火焰伤害",
@@ -208,16 +208,17 @@
   "l2hostility.configuration.allow_master": "启用词条：领主",
   "l2hostility.configuration.allow_master.tooltip": "是否允许怪物拥有领主词条",
   "trait.l2hostility.master": "领主",
-  "l2hostility.configuration.title": "L2Hostility Configuration",
-  "l2hostility.configuration.section.l2configs.l2hostility.client.toml": "L2Hostility Client Configuration",
-  "l2hostility.configuration.section.l2configs.l2hostility.client.toml.title": "L2Hostility Client Configuration",
-  "l2hostility.configuration.section.l2configs.l2hostility.server.toml": "L2Hostility Server Configuration",
-  "l2hostility.configuration.section.l2configs.l2hostility.server.toml.title": "L2Hostility Server Configuration",
-  "l2hostility.configuration.items": "Items",
-  "l2hostility.configuration.performance": "Performance",
-  "l2hostility.configuration.scaling": "Mob Scaling",
-  "l2hostility.configuration.traits": "Trait Settings",
-  "l2hostility.configuration.toggle": " Trait Toggles",
+  "l2hostility.configuration.title": "莱特兰·恶意 - 配置",
+  "l2hostility.configuration.section.l2configs.l2hostility.client.toml": "莱特兰·恶意 - 客户端配置",
+  "l2hostility.configuration.section.l2configs.l2hostility.client.toml.title": "莱特兰·恶意 - 客户端配置",
+  "l2hostility.configuration.section.l2configs.l2hostility.server.toml": "莱特兰·恶意 - 服务端配置",
+  "l2hostility.configuration.section.l2configs.l2hostility.server.toml.title": "莱特兰·恶意 - 服务端配置",
+  "l2hostility.configuration.items": "物品配置",
+  "l2hostility.configuration.performance": "性能配置",
+  "l2hostility.configuration.orb_and_spawner": "难度清除器配置",
+  "l2hostility.configuration.scaling": "怪物等级配置",
+  "l2hostility.configuration.traits": "词条数值配置",
+  "l2hostility.configuration.toggle": " 词条开关",
   "l2hostility.configuration.abrahadabraExtraLevel": "Number of level to add when using Abrahadabra",
   "l2hostility.configuration.abrahadabraExtraLevel.tooltip": " Default: 100\n Range: 0 ~ 1000",
   "l2hostility.configuration.adaptFactor": "Damage factor for Adaptive. Higher means less reduction",
@@ -387,7 +388,6 @@
   "l2hostility.configuration.nidhoggurExtraLevel.tooltip": " Default: 100\n Range: 0 ~ 1000",
   "l2hostility.configuration.orbRadius": "Radius for Hostility Orb to take effect.",
   "l2hostility.configuration.orbRadius.tooltip": "0 means 1x1x1 section, 1 means 3x3x3 sections, 2 means 5x5x5 sections\n Default: 2\n Range: 0 ~ 10",
-  "l2hostility.configuration.orb_and_spawner": "Hostility Orb and Hostility Spawner",
   "l2hostility.configuration.overHeadLevelColor": "Overhead level color in decimal form, converted from hex form",
   "l2hostility.configuration.overHeadLevelColor.tooltip": " Default: 11184810\n Range: \u003e -2147483648",
   "l2hostility.configuration.overHeadLevelColorAbyss": "Overhead level color for mobs affected by abyssal thorn",
@@ -484,7 +484,7 @@
   "l2hostility.configuration.wrathDamageBonus.tooltip": " Default: 0.05\n Range: 0.0 ~ 1.0",
   "l2hostility.configuration.wrathExtraLevel": "Number of level to add when using Curse of Wrath",
   "l2hostility.configuration.wrathExtraLevel.tooltip": " Default: 50\n Range: 0 ~ 1000",
-  "l2hostility.title": "L2Hostility",
+  "l2hostility.title": "莱特兰·恶意",
   "itemGroup.l2core.hostility": "莱特兰·恶意",
   "config.jade.plugin_l2hostility.mob": "莱特兰·恶意",
   "patchouli.l2hostility.landing": "了解难度机制和怪物词条，以更好地应对它们",
