@@ -57,8 +57,8 @@
 	},
 	"trait.l2hostility": {
 		"adaptive.desc": "记忆最近收到的%2$s种伤害。每次受到记忆中的伤害时，对那个伤害叠加%s%%的减伤（无上限）",
-		"dementor.desc": "免疫物理伤害，伤害穿透护甲",
-		"dispell.desc": "免疫魔法伤害。伤害穿透魔法保护。攻击时随机选中%s个附魔的装备并将其附魔封印%s秒",
+		"dementor.desc": "抵抗物理伤害，伤害穿透护甲",
+		"dispell.desc": "抵抗魔法伤害。伤害穿透魔法保护。攻击时随机选中%s个附魔的装备并将其附魔封印%s秒",
 		"reflect.desc": "将直接物理伤害以%s%%魔法伤害的形式反射",
 		"regenerate.desc": "每秒回复总血量的%s%%",
 		"fiery.desc": "点燃攻击者和被攻击者%s秒，怪物免疫火焰伤害",
