@@ -1,4 +1,5 @@
 3.0.13
+- Dispell and Dementor now is resistant but not immune to magic / physical damage
 - curse curio effect de-duplication
 - curse of wrath and curse of pride now stacks additively
 - only 3 hand curios would take effect when held in hand
